@@ -92,6 +92,9 @@ my %config = (
 );
 my $mock_config = Test::MockModule->new('App::Sqitch::Config');
 $mock_config->mock(get => sub { $config{ $_[2] } });
+my $mysql_version = 'mysql  Ver 15.1 Distrib 10.0.15-MariaDB';
+$mock_sqitch->mock(probe => sub { $mysql_version });
+$std_opts[0] = '--disable-pager';
 
 $target = App::Sqitch::Target->new(sqitch => $sqitch);
 ok $mysql = $CLASS->new(sqitch => $sqitch, target => $target),
